# pdum_gcp

./: AGENTS.md  README.md  bootstrap.sh  codereview.md  data.json  demo project create.ipynb  demo.ipynb  example_billing.py  example_suggest_name.py  ipy  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: reference.md  tutorial.md  tutorial_rebuild.md
docs/demos/: .gitignore  pdum_gcp_demo.ipynb
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_55fe264cba11caf0___init___py.html  z_55fe264cba11caf0__clients_py.html  z_55fe264cba11caf0__helpers_py.html  z_55fe264cba11caf0_admin_py.html  z_55fe264cba11caf0_types_py.html  z_61dfea9c49563c70___init___py.html  z_61dfea9c49563c70_billing_account_py.html  z_61dfea9c49563c70_constants_py.html  z_61dfea9c49563c70_container_py.html  z_61dfea9c49563c70_exceptions_py.html  z_61dfea9c49563c70_folder_py.html  z_61dfea9c49563c70_no_org_py.html  z_61dfea9c49563c70_organization_py.html  z_61dfea9c49563c70_project_py.html  z_61dfea9c49563c70_region_py.html  z_61dfea9c49563c70_resource_py.html  z_61dfea9c49563c70_role_py.html
scripts/: build.sh  ipython_startup.py  release.sh  setup.sh
src/pdum/gcp/: __init__.py  _clients.py  _helpers.py  admin.py  adminv0.py  bootstrap.py  cli.py  import_config.py  manage_billing.py  types.py  utils.py
src/pdum/gcp/data/: api_map.txt
src/pdum/gcp/data/regions/: multi_regions.txt  regions.txt
src/pdum/gcp/types/: __init__.py  billing_account.py  constants.py  container.py  exceptions.py  folder.py  no_org.py  organization.py  project.py  region.py  resource.py  role.py
tests/: test.ipynb  test_admin.py  test_example.py  test_lookup_api_unit.py  test_roles.py
